# sf-raytracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  balls.cpp  balls_chess.cpp  cornell_box.cpp
inc/: camera.h  color.h  mat4.h  point.h  ray.h  surface.h  vec3.h  viewport.h
inc/material/: dielectric.h  lambertian.h  luminous.h  material.h  metal.h
inc/object/: hit_record.h  hittable.h  hittable_list.h  infinite_chess.h  sphere.h  triangle.h
inc/sky/: gradient.h  monochrome.h  sky.h
inc/utils/: math.h  threadpool.hpp
src/: camera.cpp  mat4.cpp  ray.cpp  surface.cpp  vec3.cpp  viewport.cpp
src/material/: dielectric.cpp  lambertian.cpp  luminous.cpp  metal.cpp
src/object/: hit_record.cpp  hittable_list.cpp  infinite_chess.cpp  sphere.cpp  triangle.cpp
src/sky/: gradient.cpp  monochrome.cpp
src/utils/: math.cpp
